@@ -65,7 +65,7 @@ static bool preset_equal_classic_brush(const DP_ClassicBrush *a,
         && a->shape == b->shape && a->paint_mode == b->paint_mode
         && a->brush_mode == b->brush_mode && a->erase_mode == b->erase_mode
         && (in_eraser_slot || a->erase == b->erase)
-        && a->colorpick == b->colorpick
+        && a->colorpick == b->colorpick && a->smudge_alpha == b->smudge_alpha
         && preset_equal_classic_brush_dynamic(&a->size_dynamic,
                                               &b->size_dynamic)
         && preset_equal_classic_brush_dynamic(&a->hardness_dynamic,
